Minor: version bump

--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -387,7 +387,9 @@ li > .pod-block-code { margin-top: 16px; }
 
     <div class="pod-body">
     <h1 id="CHANGELOG"><a class="u" href="#___top" title="go to top of document">CHANGELOG</a></h1>
-<ul><li><p><strong>v0.1.16</strong></p>
+<ul><li><p><strong>v0.1.17</strong></p>
+</li>
+<li><p><strong>v0.1.16</strong></p>
 <ul><li><p>Fix <code>cmp-deeply</code> for nominalizables</p>
 </li>
 <li><p>Fix <code>cmp-deeply</code> for paramterized hashes with non-string keys</p>
